fix home page on mobile

--- a/Assets/CSS/index.css
+++ b/Assets/CSS/index.css
@@ -198,7 +198,8 @@ h1.header{
     .panel-default{
         height: 240px;
     }
-    h2{ font-size: 22px; }
+    h1, h1.header{ font-size: 40px; }
+    h2, h2.header{ font-size: 22px; margin-top: 10%; }
 
     #inst{
         display: block;
