--- a/Assets/CSS/main.css
+++ b/Assets/CSS/main.css
@@ -34,11 +34,11 @@ h1{
 }
 
 @media screen and (max-width: 768px) {
-    h2{
+    h2, h2.header{
         font-size: 20px;
         padding-left: 2%;
     }
-    h1{
+    h1, h1.header{
         font-size: 35px;
         padding-left: 2%;
     }
